--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
     <div class="conteudo">
         <div class="introducao">
             <span class="detalhe"></span>
-            <h1> Vinicola GMT</h1>
+            <h1> Vinícola GMT</h1>
             <p> Situada nas colinas pitorescas de uma região vinícola de renome, a Vinícola GMT emerge como um verdadeiro refúgio para os amantes de vinho e uma referência incontestável no mundo da viticultura. Com um legado que remonta a gerações, a GMT personifica a paixão pela produção de vinhos excepcionais que capturam a alma do terroir e a perícia artesanal que transforma uvas em obras-primas líquidas.</p>
             <a class="botao" href="/">Ver Mais</a>
         </div>
