--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="index_img">
     <div class="index_box">
-      <h1 class="index_title">Vinicola</h1>
+      <h1 class="index_title">Vinícola</h1>
       <p>Bem-vindos à nossa vinícola, um refúgio encantador onde a paixão pelo vinho encontra a beleza da natureza.
       <p>
         <a class="index_botao" href="home.html">Quero conhecer</a>
